--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
   "cSpell.words": [
     "insightfullness",
     "likelyhood",
+    "prebuild",
+    "prestart",
     "steph",
+    "tachyons",
     "whitepapers",
     "worklife"
   ]
