feat(chrome extension): minimal chrome extension with react and tachyons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "cSpell.words": [
     "insightfullness",
     "likelyhood",
+    "prebuild",
+    "prestart",
     "steph",
     "tachyons",
     "whitepapers",
