--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
-    "gatsby-plugin-react-helmet": "^2.0.3",
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.1.0",
+    "react-typist": "^2.0.4",
     "tachyons": "^4.9.1"
   },
   "keywords": [
