--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
-    "react-emojione": "^5.0.0",
     "react-helmet": "^5.2.0",
+    "react-mathjax": "^0.1.1",
     "react-particles-js": "^2.1.0",
     "react-typist": "^2.0.4",
     "tachyons": "^4.9.1"
