--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "react-helmet": "^5.2.0",
+    "react-hexagon": "^1.1.3",
     "react-mathjax": "^0.1.1",
     "react-particles-js": "^2.1.0",
     "react-typist": "^2.0.4",
