--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
+    "react-feather": "^1.0.8",
     "react-helmet": "^5.2.0",
     "react-hexagon": "^1.1.3",
     "react-mathjax": "^0.1.1",
