--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Cameron Porter <cam@hex.ventures>",
   "dependencies": {
+    "dateformat": "^3.0.2",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-source-filesystem": "^1.5.15",
