--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -7,6 +7,7 @@
     "dateformat": "^3.0.2",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-source-filesystem": "^1.5.15",
     "gatsby-transformer-remark": "^1.7.29",
     "react-feather": "^1.0.8",
