fix(grapqh cloud fucntion): adding gitignore for node modules

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ Thumbs.db
 ######################
 *.iml
 .idea
+
+# Cloud Functions #
+######################
+cloud-functions/graphql-server/node_modules
