--- a/cloud-functions/graphql-server/package.json
+++ b/cloud-functions/graphql-server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "1.3.2",
-    "graphql": "0.12.3"
+    "graphql": "0.12.3",
+    "graphql-tools": "2.19.0"
   }
 }
