--- a/cloud-functions/graphql/package.json
+++ b/cloud-functions/graphql/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hex-ventures/server",
+  "name": "graphql",
   "version": "0.0.1",
-  "description": "graphql server",
+  "description": "graphql cloud function",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "1.3.2",
-    "graphql": "0.12.3",
-    "graphql-tools": "2.19.0"
+    "@hex-ventures/server": "0.0.1"
   }
 }
