feat(graph database): guide on how to spin up a neo4j graph database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "discoverability",
     "insightfullness",
     "intentionality",
+    "kubernetes",
     "likelyhood",
     "opit",
     "prebuild",
