feat(chrome-ext): Prep for local storage and url access

--- a/chrome-extension/public/manifest.json
+++ b/chrome-extension/public/manifest.json
@@ -6,5 +6,9 @@
     "default_popup": "index.html",
     "default_title": "Opit"
   },
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
   "version": "1.0"
 }
