setting up debugger. Renamed to client-api. Added a simple storage layer (in memory string).

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,8 @@
     "configurations": [
         {
       "name": "Chrome",
-      "type": "chrome",
+      "type": "node",
       "request": "launch",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceRoot}/src",
-      "sourceMapPathOverrides": {
-        "webpack:///src/*": "${webRoot}/*"
-      }
+      "program": "${workspaceFolder}/client-api/index.js"
     }]
   }
