--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -1,16 +1,25 @@
 {
   "name": "desktop-client",
   "version": "0.1.0",
+  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
+  "homepage": "./",
+  "main": "src/electron-starter.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "dev": "nf start"
+  },
+  "devDependencies": {
+    "electron": "^1.8.2",
+    "foreman": "^2.0.0"
   }
 }
