--- a/client-api/package.json
+++ b/client-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "express": "4.16.2",
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "1.14.12"
   }
 }
