feat(desktop-clent): Add basic layout

--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "tachyons": "^4.9.1"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
@@ -19,7 +20,11 @@
     "dev": "nf start"
   },
   "devDependencies": {
+    "devtron": "^1.4.0",
     "electron": "^1.8.2",
+    "electron-devtools-installer": "^2.2.3",
+    "eslint": "^4.17.0",
+    "eslint-plugin-react": "^7.6.1",
     "foreman": "^2.0.0"
   }
 }
