--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -1,30 +1,23 @@
 {
   "name": "desktop-client",
   "version": "0.1.0",
-  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "tachyons": "^4.9.1"
+    "react-scripts-ts": "2.13.0"
   },
-  "homepage": "./",
-  "main": "src/electron-starter.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "dev": "nf start"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "devtron": "^1.4.0",
-    "electron": "^1.8.2",
-    "electron-devtools-installer": "^2.2.3",
-    "eslint": "^4.17.0",
-    "eslint-plugin-react": "^7.6.1",
-    "foreman": "^2.0.0"
+    "@types/jest": "^22.1.3",
+    "@types/node": "^9.4.6",
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
+    "typescript": "^2.7.2"
   }
 }
