--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -1,23 +1,31 @@
 {
   "name": "desktop-client",
   "version": "0.1.0",
+  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-scripts-ts": "2.13.0",
+    "tachyons": "^4.9.1"
   },
+  "homepage": "./",
+  "main": "src/electronStarter.js",
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "electron": "electron .",
+    "dev": "nf start"
   },
   "devDependencies": {
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "electron": "^1.8.2",
+    "foreman": "^2.0.0",
     "typescript": "^2.7.2"
   }
 }
