--- a/client-api/package.json
+++ b/client-api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "babel src --out-dir .compiled --source-maps --watch",
     "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
@@ -18,6 +19,14 @@
     "graphql-tools": "2.19.0"
   },
   "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "eslint": "4.18.0",
     "nodemon": "1.14.12"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
