--- a/client-api/package.json
+++ b/client-api/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "babel src --out-dir .compiled --source-maps --watch",
-    "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start": "babel src --out-dir .compiled && node .compiled/index.js",
+    "start:dev": "nodemon .compiled/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,6 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
-    "eslint": "4.18.0",
     "nodemon": "1.14.12"
   },
   "babel": {
