--- a/client-api/package.json
+++ b/client-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel src --out-dir .compiled --source-maps --watch",
+    "compile":
+      "babel src --out-dir .compiled --source-maps --extensions '.ts,.tsx,.js' --watch ",
     "start": "babel src --out-dir .compiled && node .compiled/index.js",
     "start:dev": "nodemon .compiled/index.js"
   },
@@ -21,11 +22,8 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
-    "nodemon": "1.14.12"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "babel-preset-typescript": "7.0.0-alpha.19",
+    "nodemon": "1.14.12",
+    "typescript": "2.7.2"
   }
 }
