--- a/client-api/package.json
+++ b/client-api/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile":
-      "babel src --out-dir .compiled --source-maps --extensions '.ts,.tsx,.js' --watch ",
+    "compile": "babel src --out-dir .compiled --source-maps --watch ",
     "start": "babel src --out-dir .compiled && node .compiled/index.js",
     "start:dev": "nodemon .compiled/index.js"
   },
@@ -22,7 +21,6 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-typescript": "7.0.0-alpha.19",
     "nodemon": "1.14.12",
     "typescript": "2.7.2"
   }
