--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/client-api/.compiled/index.js",
-      "outFiles": ["${workspaceRoot}/.compiled/**/*.js"]
+      "sourceMaps": true
     }
   ]
 }
