--- a/client-api/package.json
+++ b/client-api/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel src --out-dir .compiled --source-maps --watch ",
-    "start": "babel src --out-dir .compiled && node .compiled/index.js",
-    "start:dev": "nodemon .compiled/index.js"
+    "compile": "tsc -w",
+    "start": "tsc && node .compiled/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +18,8 @@
     "graphql-tools": "2.19.0"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
+    "@types/express": "4.11.1",
+    "@types/graphql": "0.12.4",
     "nodemon": "1.14.12",
     "typescript": "2.7.2"
   }
