(client-api): wiring up mysql store for creating and getting captures

--- a/client-api/tsconfig.json
+++ b/client-api/tsconfig.json
@@ -4,9 +4,7 @@
     "module": "commonjs",
     "outDir": "./.compiled",
     "lib": ["es6", "dom", "esnext"],
-    "sourceMap": true,
-    "forceConsistentCasingInFileNames": true,
-    "noUnusedLocals": true
+    "sourceMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
