--- a/client-api/package.json
+++ b/client-api/package.json
@@ -15,7 +15,9 @@
     "body-parser": "1.18.2",
     "express": "4.16.2",
     "graphql": "0.12.3",
-    "graphql-tools": "2.19.0"
+    "graphql-tools": "2.19.0",
+    "knex": "0.14.4",
+    "mysql": "2.15.0"
   },
   "devDependencies": {
     "@types/express": "4.11.1",
