--- a/client-api/package.json
+++ b/client-api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -w",
+    "start:dev": "tsc && node .compiled/index.js",
     "start": "tsc && node .compiled/index.js"
   },
   "author": "",
@@ -17,12 +18,13 @@
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
     "knex": "0.14.4",
-    "mysql": "2.15.0"
+    "mysql": "2.15.0",
+    "@types/node": "9.4.6",
+    "typescript": "2.7.2"
   },
   "devDependencies": {
     "@types/express": "4.11.1",
     "@types/graphql": "0.12.4",
-    "nodemon": "1.14.12",
-    "typescript": "2.7.2"
+    "nodemon": "1.14.12"
   }
 }
