ux(capture): adding in basic text input functionality

--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -7,13 +7,14 @@
     "@types/react-redux": "^5.0.15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-quill": "1.2.6",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.13.0",
     "redux": "^3.7.2",
     "tachyons": "^4.9.1"
   },
   "homepage": "./",
-  "main": "src/electronStarter.js",
+  "main": "src/electron-starter.js",
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
@@ -28,6 +29,7 @@
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "electron": "^1.8.2",
+    "electron-devtools-installer": "2.2.3",
     "foreman": "^2.0.0",
     "typescript": "^2.7.2"
   }
