--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -1,15 +1,18 @@
 {
   "name": "desktop-client",
   "version": "0.1.0",
-  "description":
-    "A desktop client for empowering people to capture and connect thoughts to create big ideas",
+  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
-    "@types/react-redux": "^5.0.15",
+    "apollo-cache-inmemory": "1.1.9",
+    "apollo-client": "2.2.5",
+    "apollo-link-http": "1.5.2",
+    "graphql": "0.13.0",
+    "graphql-tag": "2.8.0",
     "react": "^16.2.0",
+    "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
     "react-quill": "1.2.6",
-    "react-redux": "^5.0.7",
     "react-scripts-ts": "2.13.0",
     "tachyons": "^4.9.1"
   },
@@ -21,13 +24,17 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
-    "dev": "nf start"
+    "dev": "nf start",
+    "schema": "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts"
   },
   "devDependencies": {
+    "@types/graphql": "0.12.4",
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "apollo-codegen": "0.19.0",
     "electron": "^1.8.2",
     "electron-devtools-installer": "2.2.3",
     "foreman": "^2.0.0",
