--- a/client-api/package.json
+++ b/client-api/package.json
@@ -12,14 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "9.4.6",
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
+    "cors": "2.8.4",
     "express": "4.16.2",
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
     "knex": "0.14.4",
     "mysql": "2.15.0",
-    "@types/node": "9.4.6",
     "typescript": "2.7.2"
   },
   "devDependencies": {
