feat(desktop client): improving developer experience with nodemon

--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -26,7 +26,8 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
-    "dev": "nf start",
+    "dev":
+      "nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views  --exec 'nf start'",
     "schema":
       "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
     "types":
@@ -42,6 +43,7 @@
     "electron": "^1.8.2",
     "electron-devtools-installer": "2.2.3",
     "foreman": "^2.0.0",
+    "nodemon": "1.17.1",
     "typescript": "^2.7.2"
   }
 }
