--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -27,7 +27,7 @@
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
     "dev":
-      "nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views  --exec 'nf start'",
+      "nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
     "schema":
       "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
     "types":
