--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -14,6 +14,7 @@
     "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
     "react-quill": "1.2.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "tachyons": "^4.9.1",
     "underscore": "1.8.3"
@@ -26,12 +27,10 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
-    "dev":
-      "nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
-    "schema":
-      "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
-    "types":
-      "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts"
+    "dev": "nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
+    "schema": "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts"
+
   },
   "devDependencies": {
     "@types/graphql": "0.12.4",
@@ -39,6 +38,7 @@
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "@types/react-router-dom": "^4.2.4",
     "apollo-codegen": "0.19.0",
     "electron": "^1.8.2",
     "electron-devtools-installer": "2.2.3",
