--- a/client-api/package.json
+++ b/client-api/package.json
@@ -21,11 +21,13 @@
     "graphql-tools": "2.19.0",
     "knex": "0.14.4",
     "mysql": "2.15.0",
+    "twilio": "3.13.0",
     "typescript": "2.7.2"
   },
   "devDependencies": {
     "@types/express": "4.11.1",
     "@types/graphql": "0.12.4",
+    "ngrok": "3.0.0",
     "nodemon": "1.14.12"
   }
 }
