--- a/client-api/app.yaml
+++ b/client-api/app.yaml
@@ -18,9 +18,8 @@ beta_settings:
   # the Instance details page in the Google Cloud Platform Console.
   cloud_sql_instances: opit-193719:us-central1:mysql-test
 env_variables:
-  GCLOUD_PROJECT: opit-193719
   SQL_USER: root
-  SQL_PASSWORD: 
+  SQL_PASSWORD: ""
   SQL_DATABASE: test
   # e.g. my-awesome-project:us-central1:my-cloud-sql-instance
   INSTANCE_CONNECTION_NAME: opit-193719:us-central1:mysql-test
