style(desktop client): updating text input style (WIP tag and mention highlightin)

--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -1,8 +1,7 @@
 {
   "name": "desktop-client",
   "version": "0.1.0",
-  "description":
-    "A desktop client for empowering people to capture and connect thoughts to create big ideas",
+  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -30,12 +29,12 @@
     "dev": "nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
     "schema": "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
     "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts"
-
   },
   "devDependencies": {
     "@types/graphql": "0.12.4",
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
+    "@types/quill": "^1.3.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.4",
