--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -37,6 +37,7 @@
     "@types/quill": "^1.3.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
     "apollo-codegen": "0.19.0",
     "electron": "^1.8.2",
