--- a/client-api/package.json
+++ b/client-api/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -w",
     "start:dev": "tsc && node .compiled/index.js",
-    "start": "tsc && node .compiled/index.js"
+    "start": "tsc && node .compiled/index.js",
+    "deploy": "gcloud app deploy ./app.yaml"
   },
   "author": "",
   "license": "ISC",
