--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -18,16 +18,16 @@
     "react-typist": "^2.0.4",
     "tachyons": "^4.9.1"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "deploy":
+      "gatsby build --prefix-paths && gh-pages -d public && gcloud app deploy ./app.yaml",
+    "format":
+      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
