--- a/client-api/package.json
+++ b/client-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -w",
-    "start:dev": "tsc && node .compiled/index.js",
+    "start:dev": "tsc && NODE_ENV=development node .compiled/index.js",
     "start": "tsc && node .compiled/index.js",
     "deploy": "gcloud app deploy ./app.yaml"
   },
