--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -3,8 +3,7 @@
   "productName": "Tangle",
   "version": "0.1.0",
   "engine": "8.9.4",
-  "description":
-    "A desktop client for empowering people to capture and connect thoughts to create big ideas",
+  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -12,14 +11,14 @@
     "apollo-link-http": "1.5.2",
     "graphql": "0.13.0",
     "graphql-tag": "2.8.0",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
     "react-quill": "1.2.6",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
-    "tachyons": "^4.9.1",
-    "underscore": "1.8.3"
+    "tachyons": "^4.9.1"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
@@ -29,19 +28,16 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
-    "dev":
-      "NODE_ENV=development nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
-    "schema":
-      "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
-    "types":
-      "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "package-mac":
-      "yarn build && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
+    "dev": "NODE_ENV=development nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
+    "schema": "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "package-mac": "yarn build && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
     "deploy": "NODE_ENV=production yarn build && gcloud app deploy ./app.yaml"
   },
   "devDependencies": {
     "@types/graphql": "0.12.4",
     "@types/jest": "^22.1.3",
+    "@types/lodash": "^4.14.104",
     "@types/node": "^9.4.6",
     "@types/quill": "^1.3.6",
     "@types/react": "^16.0.38",
