--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -9,6 +9,8 @@
     "apollo-cache-inmemory": "1.1.9",
     "apollo-client": "2.2.5",
     "apollo-link-http": "1.5.2",
+    "echarts": "^4.0.4",
+    "echarts-for-react": "^2.0.8",
     "graphql": "0.13.0",
     "graphql-tag": "2.8.0",
     "lodash": "^4.17.5",
@@ -35,6 +37,7 @@
     "deploy": "NODE_ENV=production yarn build && gcloud app deploy ./app.yaml"
   },
   "devDependencies": {
+    "@types/echarts": "^0.0.12",
     "@types/graphql": "0.12.4",
     "@types/jest": "^22.1.3",
     "@types/lodash": "^4.14.104",
