--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -25,7 +25,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "deploy":
-      "gatsby build --prefix-paths && gh-pages -d public && gcloud app deploy ./app.yaml",
+      "gatsby build --prefix-paths && gh-pages -d public",
     "format":
       "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
