--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -3,7 +3,8 @@
   "productName": "Tangle",
   "version": "0.1.0",
   "engine": "8.9.4",
-  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
+  "description":
+    "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -30,11 +31,14 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
-    "dev": "NODE_ENV=development nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
-    "schema": "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
-    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "package-mac": "yarn build && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
-    "deploy": "NODE_ENV=production yarn build && gcloud app deploy ./app.yaml"
+    "dev":
+      "NODE_ENV=development nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
+    "schema":
+      "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types":
+      "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "package-mac":
+      "yarn build && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
   },
   "devDependencies": {
     "@types/echarts": "^0.0.12",
