--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -3,8 +3,7 @@
   "productName": "Tangle",
   "version": "0.1.0",
   "engine": "8.9.4",
-  "description":
-    "A desktop client for empowering people to capture and connect thoughts to create big ideas",
+  "description": "A desktop client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -12,6 +11,7 @@
     "apollo-link-http": "1.5.2",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
+    "electron-devtools-installer": "^2.2.3",
     "graphql": "0.13.0",
     "graphql-tag": "2.8.0",
     "lodash": "^4.17.5",
@@ -31,14 +31,10 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "electron": "electron .",
-    "dev":
-      "NODE_ENV=development nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
-    "schema":
-      "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
-    "types":
-      "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "package-mac":
-      "yarn build && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
+    "dev": "NODE_ENV=development nodemon --watch ./src --ignore ./src/components --ignore ./src/components --ignore ./src/views --ignore ./src/App.tsx --ignore ./src/index.tsx --ignore ./src/queries.ts  --exec 'nf start'",
+    "schema": "apollo-codegen introspect-schema https://opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "package-mac": "yarn build && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
   },
   "devDependencies": {
     "@types/echarts": "^0.0.12",
@@ -53,7 +49,6 @@
     "@types/react-router-dom": "^4.2.4",
     "apollo-codegen": "0.19.0",
     "electron": "^1.8.2",
-    "electron-devtools-installer": "2.2.3",
     "electron-packager": "^11.1.0",
     "foreman": "^2.0.0",
     "nodemon": "1.17.1",
