--- a/web-client/package.json
+++ b/web-client/package.json
@@ -26,7 +26,8 @@
   "homepage": "./",
   "main": "src/electron-starter.js",
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start":
+      "mkdir ./src/__generated__ && yarn types && react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
