--- a/web-client/package.json
+++ b/web-client/package.json
@@ -3,8 +3,7 @@
   "productName": "Tangle",
   "version": "0.1.0",
   "engine": "8.9.4",
-  "description":
-    "A web client for empowering people to capture and connect thoughts to create big ideas",
+  "description": "A web client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -18,24 +17,22 @@
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
+    "react-feather": "^1.0.8",
     "react-quill": "1.2.6",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "tachyons": "^4.9.1"
   },
   "homepage": "./",
-  "main": "src/electron-starter.js",
+  "main": "server.js",
   "scripts": {
-    "start":
-      "mkdir ./src/__generated__ && yarn types && react-scripts-ts start",
+    "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "schema":
-      "apollo-codegen introspect-schema https://client-api-dot-opit-193719.appspot.com/graphql --output ./src/schema.json",
-    "types":
-      "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "deploy": "NODE_ENV=production yarn build && gcloud app deploy ./app.yaml"
+    "schema": "apollo-codegen introspect-schema https://client-api-dot-opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "deploy": "yarn build && cp -r ./build ./server && gcloud app deploy ./server/app.yaml"
   },
   "devDependencies": {
     "@types/echarts": "^0.0.12",
