--- a/web-client/package.json
+++ b/web-client/package.json
@@ -3,7 +3,8 @@
   "productName": "Tangle",
   "version": "0.1.0",
   "engine": "8.9.4",
-  "description": "A web client for empowering people to capture and connect thoughts to create big ideas",
+  "description":
+    "A web client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -30,9 +31,11 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "schema": "apollo-codegen introspect-schema https://client-api-dot-opit-193719.appspot.com/graphql --output ./src/schema.json",
-    "types": "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "deploy": "yarn build && cp -r ./build ./server && gcloud app deploy ./server/app.yaml"
+    "schema":
+      "apollo-codegen introspect-schema https://client-api-dot-opit-193719.appspot.com/graphql --output ./src/schema.json",
+    "types":
+      "apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "deploy": "yarn build && gcloud app deploy ./app.yaml"
   },
   "devDependencies": {
     "@types/echarts": "^0.0.12",
