committing path to my api key- we should put this in gitignore

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,11 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/client-api/.compiled/index.js",
-      "sourceMaps": true
+      "sourceMaps": true,
+      "env": {
+        "GOOGLE_APPLICATION_CREDENTIALS":
+          "/Users/colemccracken/Downloads/opit-9afec94eb5d9.json"
+      }
     },
     {
       "name": "Debug desktop-client main process",
