--- a/client-api/package.json
+++ b/client-api/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/language": "1.2.0",
     "@types/node": "9.4.6",
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
