--- a/client-api/package.json
+++ b/client-api/package.json
@@ -18,6 +18,7 @@
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
+    "dedupe": "2.1.0",
     "express": "4.16.2",
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
