--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -8,8 +8,14 @@
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-favicon": "^2.1.1",
-    "gatsby-source-filesystem": "^1.5.15",
+    "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-remark-copy-images": "^0.2.1",
+    "gatsby-remark-copy-linked-files": "^1.5.30",
+    "gatsby-remark-images": "^1.5.60",
+    "gatsby-remark-responsive-iframe": "^1.4.18",
+    "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.29",
+    "gatsby-transformer-sharp": "^1.6.22",
     "react-feather": "^1.0.8",
     "react-helmet": "^5.2.0",
     "react-hexagon": "^1.1.3",
@@ -18,16 +24,16 @@
     "react-typist": "^2.0.4",
     "tachyons": "^4.9.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "deploy":
-      "gatsby build --prefix-paths && gh-pages -d public",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
