--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -9,8 +9,6 @@
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-remark-copy-images": "^0.2.1",
-    "gatsby-remark-copy-linked-files": "^1.5.30",
     "gatsby-remark-images": "^1.5.60",
     "gatsby-remark-responsive-iframe": "^1.4.18",
     "gatsby-source-filesystem": "^1.5.27",
@@ -30,6 +28,8 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "dev": "rm -rf .cache/* && gatsby develop",
+    "deploy-pl": "rm -rf .cache/* && gatsby build --prefix-paths",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
