--- a/static-site-generator/package.json
+++ b/static-site-generator/package.json
@@ -9,6 +9,7 @@
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-remark-copy-linked-files": "^1.5.30",
     "gatsby-remark-images": "^1.5.60",
     "gatsby-remark-responsive-iframe": "^1.4.18",
     "gatsby-source-filesystem": "^1.5.27",
