--- a/web-client/app.yaml
+++ b/web-client/app.yaml
@@ -18,6 +18,9 @@ env_variables:
 
 # [START handlers]
 handlers:
+ - url: /static
+   static_dir: build/static
+
  - url: /
    static_files: build/index.html
    upload: build/index.html
