--- a/client-api/package.json
+++ b/client-api/package.json
@@ -23,6 +23,7 @@
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
     "knex": "0.14.4",
+    "lodash": "4.17.5",
     "mysql": "2.15.0",
     "twilio": "2.1.1",
     "typescript": "2.7.2"
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/express": "4.11.1",
     "@types/graphql": "0.12.4",
+    "graphql-request": "1.5.1",
     "ngrok": "3.0.0",
     "nodemon": "1.14.12"
   }
