docs(information-theory): some really raw thoughts based on Cesar Hidalgos book

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
+    "clustersing",
     "discoverability",
     "insightfullness",
     "intentionality",
     "kubernetes",
     "likelyhood",
     "opit",
+    "personbyte",
     "prebuild",
     "prestart",
     "steph",
