--- a/client-api/package.json
+++ b/client-api/package.json
@@ -25,6 +25,7 @@
     "knex": "0.14.4",
     "lodash": "4.17.5",
     "mysql": "2.15.0",
+    "neo4j-driver": "1.5.3",
     "twilio": "2.1.1",
     "typescript": "2.7.2"
   },
