--- a/client-api/package.json
+++ b/client-api/package.json
@@ -27,7 +27,8 @@
     "mysql": "2.15.0",
     "neo4j-driver": "1.5.3",
     "twilio": "2.1.1",
-    "typescript": "2.7.2"
+    "typescript": "2.7.2",
+    "uuid": "3.2.1"
   },
   "devDependencies": {
     "@types/express": "4.11.1",
