adding auth support

--- a/client-api/package.json
+++ b/client-api/package.json
@@ -14,18 +14,21 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/language": "1.2.0",
+    "@google-cloud/storage": "1.6.0",
     "@types/node": "9.4.6",
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "dedupe": "2.1.0",
     "express": "4.16.2",
+    "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
     "knex": "0.14.4",
     "lodash": "4.17.5",
     "mysql": "2.15.0",
     "neo4j-driver": "1.5.3",
+    "request-context": "2.0.0",
     "twilio": "2.1.1",
     "typescript": "2.7.2",
     "uuid": "3.2.1"
