--- a/client-api/package.json
+++ b/client-api/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "dedupe": "2.1.0",
+    "dotenv": "5.0.1",
     "express": "4.16.2",
     "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
