--- a/web-client/package.json
+++ b/web-client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "react-window-size": "1.0.1",
+    "scroll-into-view": "1.9.3",
     "tachyons": "^4.9.1",
     "tinycolor": "^0.0.1",
     "tinycolor2": "^1.4.1",
