separating dev and prod yamls

--- a/client-api/package.json
+++ b/client-api/package.json
@@ -9,7 +9,7 @@
     "start:dev": "yarn build && NODE_ENV=development node .compiled/index.js",
     "build": "tsc",
     "start": "node .compiled/index.js",
-    "deploy": "yarn build && gcloud -q app deploy ./app.yaml",
+    "deploy:dev": "yarn build && gcloud -q app deploy ./dev.yaml",
     "deploy:prod": "yarn build && gcloud -q app deploy ./prod.yaml"
   },
   "author": "",
