--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,12 @@
       "program": "${workspaceFolder}/client-api/.compiled/index.js",
       "sourceMaps": true,
       "envFile": "${workspaceRoot}/client-api/.env",
-      "env": { "NODE_ENV": "development" }
+      "env": {
+        "NODE_ENV": "development",
+        "NEO4J_ENDPOINT": "bolt+routing://35.197.60.182:7687",
+        "NEO4J_USER": "neo4j",
+        "NEO4J_PASSWORD": "mz6bJV6YC9irutUo"
+      }
     },
     {
       "name": "Launch Chrome against localhost web client",
