--- a/client-api/dev.yaml
+++ b/client-api/dev.yaml
@@ -1,7 +1,7 @@
 # [START runtime]
 runtime: nodejs
 env: flex
-service: client-api-prod
+service: client-api-dev
 
 manual_scaling:
   instances: 1
@@ -12,7 +12,7 @@ resources:
   disk_size_gb: 10
 
 env_variables:
-  NODE_ENV: "production"
+  NODE_ENV: "development"
   NEO4J_ENDPOINT: "bolt+routing://35.197.60.182:7687"
   NEO4J_USER: "neo4j"
   NEO4J_PASSWORD: "mz6bJV6YC9irutUo"
