--- a/client-api/prod.yaml
+++ b/client-api/prod.yaml
@@ -3,8 +3,8 @@ runtime: nodejs
 env: flex
 service: client-api-prod
 
-basic_scaling:
-  max_instances: 5
+manual_scaling:
+  instances: 1
   
 resources:
   cpu: 1
