--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
         "NODE_ENV": "development",
         "NEO4J_ENDPOINT": "bolt+routing://35.197.60.182:7687",
         "NEO4J_USER": "neo4j",
-        "NEO4J_PASSWORD": "mz6bJV6YC9irutUo"
+        "NEO4J_PASSWORD": "mz6bJV6YC9irutUo",
+        "GCLOUD_PROJECT": "opit-193719"
       }
     },
     {
@@ -21,9 +22,7 @@
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}/web-client",
       "env": {
-        "NODE_ENV": "development",
-        "REACT_APP_GRAPHQL_URI":
-          "https://client-api-dev-dot-opit-193719.appspot.com/graphql"
+        "REACT_APP_ENV": "local"
       }
     }
   ]
