--- a/client-api/package.json
+++ b/client-api/package.json
@@ -24,8 +24,8 @@
     "dedupe": "2.1.0",
     "dotenv": "5.0.1",
     "express": "4.16.2",
+    "express-formidable": "1.0.0",
     "firebase-admin": "5.12.0",
-    "formidable": "1.2.1",
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
     "lodash": "4.17.5",
@@ -36,9 +36,10 @@
     "uuid": "3.2.1"
   },
   "devDependencies": {
+    "@types/body-parser": "1.17.0",
     "@types/cheerio": "0.22.7",
     "@types/express": "4.11.1",
-    "@types/formidable": "1.0.31",
+    "@types/express-formidable": "1.0.3",
     "@types/graphql": "0.12.4",
     "@types/neo4j": "2.0.2",
     "@types/node": "9.6.5",
