testing prepush script

--- a/client-api/package.json
+++ b/client-api/package.json
@@ -11,6 +11,7 @@
     "compile": "tsc -w",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "tsc",
+    "prepush": "yarn build && yarn lint",
     "start": "node .compiled/index.js",
     "deploy:api:dev": "yarn build && gcloud -q app deploy ./dev.yaml",
     "deploy:api:prod": "yarn build && gcloud -q app deploy ./prod.yaml"
