--- a/client-api/package.json
+++ b/client-api/package.json
@@ -7,7 +7,7 @@
     "node": "8.9.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "compile": "tsc -w",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "tsc",
@@ -17,6 +17,13 @@
     "deploy:api:prod": "yarn build && gcloud -q app deploy ./prod.yaml"
   },
   "author": "",
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts)$",
+    "moduleFileExtensions": ["ts", "js", "json", "node"]
+  },
   "license": "ISC",
   "dependencies": {
     "@google-cloud/language": "1.2.0",
@@ -45,11 +52,14 @@
     "@types/express": "4.11.1",
     "@types/express-formidable": "1.0.3",
     "@types/graphql": "0.12.4",
+    "@types/jest": "22.2.3",
     "@types/neo4j": "2.0.2",
     "@types/node": "9.6.5",
     "graphql-request": "1.5.1",
+    "jest": "22.4.3",
     "ngrok": "3.0.0",
     "nodemon": "1.14.12",
-    "sleep": "5.1.1"
+    "sleep": "5.1.1",
+    "ts-jest": "22.4.4"
   }
 }
