adding tests to precommit

--- a/client-api/package.json
+++ b/client-api/package.json
@@ -11,7 +11,7 @@
     "compile": "tsc -w",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "tsc",
-    "prepush": "yarn build && yarn lint",
+    "prepush": "yarn build && yarn lint && yarn test",
     "start": "node .compiled/index.js",
     "deploy:api:dev": "yarn build && gcloud -q app deploy ./dev.yaml",
     "deploy:api:prod": "yarn build && gcloud -q app deploy ./prod.yaml"
