refactored surface flows to be more modular, removed surface dependency on executeQuery in favor of executeQueryWithParams

--- a/client-api/tsconfig.json
+++ b/client-api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitReturns": true,
     "target": "es6",
     "module": "commonjs",
     "outDir": "./.compiled",
