fix(web-client): making converstion to and from draft content state to and from html maintains empty lines

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -13,8 +13,8 @@
     "apollo-link-http": "1.5.2",
     "apollo-link-retry": "2.2.3",
     "axios": "0.18.0",
+    "draft-convert": "2.1.2",
     "draft-js": "0.10.5",
-    "draft-js-export-html": "1.2.0",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
     "firebase": "4.12.1",
