pinning yarn and node versions

--- a/client-api/package.json
+++ b/client-api/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "graphql server",
   "main": "index.js",
-  "engine": {
-    "node": "8.9.4"
+  "engines": {
+    "node": "8.9.4",
+    "yarn": "1.5.1"
   },
   "scripts": {
     "test": "jest",
